Fix T42367: Spline-ik offset evaluating curve